# Crix

./: .env.example  .gitignore  LICENSE  PROJECT.md  README.md  WAKEWORD.md  crix-capabilities.md  plan.md  pyproject.toml  ydotool.txt
configs/: hey_crix.yaml
src/: agent.py  config.py  keycodes.py  tools.py
src/backends/: __init__.py  browser.py  clipboard.py  gnome.py  legacy.py  memory.py  screenshot.py  ydotool.py
src/prompts/: crix.py
src/wakeword/: __init__.py  detector.py  pipeline.py
